<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.chrisnewland</groupId>
    <artifactId>demofx</artifactId>
    <version>0.0.1</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <main.class>com.chrisnewland.demofx.DemoFXApplication</main.class>
        <maven.compiler.release>11</maven.compiler.release>
        <javafx.version>17-ea+11</javafx.version>
        <javafx.plugin.version>0.0.6</javafx.plugin.version>
        <client.plugin.version>0.1.42</client.plugin.version>
        <commandlineArgs.space.options>-e=colourbackground-triangles -c=1000 -t=30</commandlineArgs.space.options>
        <commandlineArgs.options>-e=colourbackground-triangles,-c=1000,-t=30,-Xmx50m</commandlineArgs.options>
        <runtime.jvm.options>--add-exports=javafx.media/com.sun.media.jfxmedia.control=ALL-UNNAMED,-Xmx50m</runtime.jvm.options>
        <runtime.options>${commandlineArgs.options}</runtime.options>
        <remote.host.name/>
        <remote.dir/>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>${javafx.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.0.2</version>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.2.1</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>com.chrisnewland.demofx.DemoFXApplication</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx.plugin.version}</version>
                <configuration>
                    <mainClass>${main.class}</mainClass>
                    <options>${runtime.jvm.options}</options>
                    <commandlineArgs>${commandlineArgs.space.options}</commandlineArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>client-maven-plugin</artifactId>
                <version>${client.plugin.version}</version>
                <configuration>
                    <target>${client.target}</target>
                    <mainClass>${main.class}</mainClass>
                    <runtimeArgs>${runtime.options}</runtimeArgs>
                    <remoteHostName>${remote.host.name}</remoteHostName>
                    <remoteDir>${remote.dir}</remoteDir>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>pi</id>
            <properties>
                <client.target>linux-aarch64</client.target>
                <remote.host.name>pi@raspberrypi.local</remote.host.name>
                <remote.dir>/home/pi/Downloads/DemoFX/</remote.dir>
                <remote.sdk.path>/opt/javafx-sdk-17</remote.sdk.path>
                <runtime.jvm.options>-Dmonocle.egl.lib=${remote.sdk.path}/lib/libgluon_drm-1.1.4.so,-Dmonocle.platform=EGL,-Duse.egl=true,-Dembedded=monocle,-Dglass.platform=Monocle,-Dcom.sun.javafx.isEmbedded=true,-Dmonocle.input.touchRadius=1,-Dprism.verbose=true</runtime.jvm.options>
                <runtime.options>-Dmonocle.platform=EGL,-Duse.egl=true,-Dembedded=monocle,-Dglass.platform=Monocle,-Dcom.sun.javafx.isEmbedded=true,-Dmonocle.input.touchRadius=1,${commandlineArgs.options}</runtime.options>
            </properties>
        </profile>
        <profile>
            <id>sdk</id>
            <dependencies>
                <dependency>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-base</artifactId>
                    <version>${javafx.version}</version>
                    <scope>system</scope>
                    <systemPath>${remote.sdk.path}/lib/javafx.base.jar</systemPath>
                </dependency>
                <dependency>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-graphics</artifactId>
                    <version>${javafx.version}</version>
                    <scope>system</scope>
                    <systemPath>${remote.sdk.path}/lib/javafx.graphics.jar</systemPath>
                </dependency>
                <dependency>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-controls</artifactId>
                    <version>${javafx.version}</version>
                    <scope>system</scope>
                    <systemPath>${remote.sdk.path}/lib/javafx.controls.jar</systemPath>
                </dependency>
                <dependency>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-media</artifactId>
                    <version>${javafx.version}</version>
                    <scope>system</scope>
                    <systemPath>${remote.sdk.path}/lib/javafx.media.jar</systemPath>
                </dependency>
            </dependencies>
        </profile>
    </profiles>
</project>
